removed paused from task and group (API and DB)
